--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,18 @@
 
 <body>
     <div class="page">
-        <div class="nav"></div>
+        <div class="nav">
+            <div class="nav-logo">
+                <img src="logo.png" />
+            </div>
+            <div class="nav-menu">
+                <h3 class="h3">Home</h3>
+                <h3 class="h3">About</h3>
+                <h3 class="h3">Deals</h3>
+                <h3 class="h3">Reservation</h3>
+                <h3 class="h3">Book Yours</h3>
+            </div>
+        </div>
     </div>
 </body>
 
