--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
     <div class="page">
         <div class="nav">
             <div class="nav-logo">
-                <img src="logo.png" />
+                <img src="logo.png" class="logo" />
             </div>
             <div class="nav-menu">
                 <h3 class="h3">Home</h3>
@@ -19,6 +19,16 @@
                 <h3 class="h3">Reservation</h3>
                 <h3 class="h3">Book Yours</h3>
             </div>
+        </div>
+        <div class="explore">
+            <!-- <img src="forest.jpg" class="explore-image" /> -->
+            <div class="text">
+                <p>Take a Glimplse into The Beautiful Country Of:
+                    <h1>Switzerland</h1>
+                </p>
+                <button>&nbsp;&nbsp;&nbsp;&nbsp;Go There&nbsp;&nbsp;&nbsp;&nbsp;</button>
+            </div>
+
         </div>
     </div>
 </body>
