--- a/pages/index.html
+++ b/pages/index.html
@@ -28,9 +28,8 @@
                 </p>
                 <button>&nbsp;&nbsp;&nbsp;&nbsp;Go There&nbsp;&nbsp;&nbsp;&nbsp;</button>
             </div>
-
+            <div class=""></div>
         </div>
-    </div>
 </body>
 
 </html>
