wip (add some images and put it)

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,12 +24,36 @@
             <!-- <img src="forest.jpg" class="explore-image" /> -->
             <div class="text">
                 <p>Take a Glimplse into The Beautiful Country Of:
-                    <h1>Switzerland</h1>
+                    <h1><b>Switzerland</b></h1>
                 </p>
-                <button>&nbsp;&nbsp;&nbsp;&nbsp;Go There&nbsp;&nbsp;&nbsp;&nbsp;</button>
+                <button class="b1">&nbsp;&nbsp;&nbsp;&nbsp;Go There&nbsp;&nbsp;&nbsp;&nbsp;</button>
             </div>
-            <div class=""></div>
+            <div class="explore-more">
+                <div class="explore-nav">
+                    <div class="person-img">
+                        <img class="person" src="person.png">
+                    </div>
+                    <div class="text1">Population</div>
+                    <div class="text2">8.66M</div>
+                </div>
+                <div class="explore-nav1">
+                    <div class="world-img">
+                        <img class="world" src="worldblue.jpg">
+                    </div>
+                    <div class="text3">Territory</div>
+                    <div class="text4">41.290km<sup>2</sup></div>
+                </div>
+                <!-- <div class="explore-nav2">
+                    <div class="home-img">
+                        <img class="home" src="home.png">
+                    </div>
+                    <div class="text5">AVG Price</div>
+                    <div class="text6">$1,100,200</div>
+                </div> -->
+                <!-- <button class="b2">Explore More</button> -->
+            </div>
         </div>
+    </div>
 </body>
 
 </html>
