wip in "explore-more"

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <title>WoOx</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <!-- <i class="glyphicon glyphicon-home" style="font-size: 24px; color: blue"></i>
+    <i class="glyphicon glyphicon-globe" style="font-size: 24px; color: blue"></i>
+    <i class="glyphicon glyphicon-user" style="font-size: 24px; color: blue"></i> -->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 
@@ -40,17 +44,21 @@
                     <div class="world-img">
                         <img class="world" src="worldblue.jpg">
                     </div>
-                    <div class="text3">Territory</div>
-                    <div class="text4">41.290km<sup>2</sup></div>
+                    <div class="text3">Terrlitory</div>
+                    <div class="text4">41.290km<i>2</i></div>
                 </div>
-                <!-- <div class="explore-nav2">
+                <div class="explore-nav2">
                     <div class="home-img">
-                        <img class="home" src="home.png">
+
+                        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+                        <b id="home" class="glyphicon glyphicon-home"></b>
                     </div>
                     <div class="text5">AVG Price</div>
                     <div class="text6">$1,100,200</div>
-                </div> -->
-                <!-- <button class="b2">Explore More</button> -->
+                </div>
+                <div class="explore-button">
+                    <button class="b2">Explore More</button>
+                </div>
             </div>
         </div>
     </div>
