--- a/pages/index.html
+++ b/pages/index.html
@@ -4,9 +4,7 @@
 <head>
     <title>WoOx</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <!-- <i class="glyphicon glyphicon-home" style="font-size: 24px; color: blue"></i>
-    <i class="glyphicon glyphicon-globe" style="font-size: 24px; color: blue"></i>
-    <i class="glyphicon glyphicon-user" style="font-size: 24px; color: blue"></i> -->
+
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 
@@ -17,11 +15,11 @@
                 <img src="logo.png" class="logo" />
             </div>
             <div class="nav-menu">
-                <h3 class="h3">Home</h3>
-                <h3 class="h3">About</h3>
-                <h3 class="h3">Deals</h3>
-                <h3 class="h3">Reservation</h3>
-                <h3 class="h3">Book Yours</h3>
+                <h4 class="h4">Home</h4>
+                <h4 class="h4">About</h4>
+                <h4 class="h4">Deals</h4>
+                <h4 class="h4">Reservation</h4>
+                <h4 class="h4">Book Yours</h4>
             </div>
         </div>
         <div class="explore">
@@ -29,28 +27,29 @@
             <div class="text">
                 <p>Take a Glimplse into The Beautiful Country Of:
                     <h1><b>Switzerland</b></h1>
-                </p>
+                </p><br>
                 <button class="b1">&nbsp;&nbsp;&nbsp;&nbsp;Go There&nbsp;&nbsp;&nbsp;&nbsp;</button>
             </div>
             <div class="explore-more">
                 <div class="explore-nav">
                     <div class="person-img">
-                        <img class="person" src="person.png">
+                        <!-- <img class="person" src="person.png"> -->
+                        <b id="person" class="glyphicon glyphicon-user" style="font-size: 25px;"></b>
                     </div>
                     <div class="text1">Population</div>
                     <div class="text2">8.66M</div>
                 </div>
                 <div class="explore-nav1">
                     <div class="world-img">
-                        <img class="world" src="worldblue.jpg">
+                        <!-- <img class="world" src="worldblue.jpg"> -->
+                        <b class="glyphicon glyphicon-globe" id="world"></b>
+
                     </div>
                     <div class="text3">Terrlitory</div>
                     <div class="text4">41.290km<i>2</i></div>
                 </div>
                 <div class="explore-nav2">
                     <div class="home-img">
-
-                        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
                         <b id="home" class="glyphicon glyphicon-home"></b>
                     </div>
                     <div class="text5">AVG Price</div>
@@ -58,6 +57,28 @@
                 </div>
                 <div class="explore-button">
                     <button class="b2">Explore More</button>
+                </div>
+            </div>
+            <div class="explore-line">
+                <div class="line">
+                    <b class="b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
+                    <b class="b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
+                    <b class="b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
+                    <b class="b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
+                </div>
+                <div class="explore-text">
+                    <b class="number">
+                        1
+                    </b>
+                    <b class="number">
+                        2
+                    </b>
+                    <b class="number">
+                        3
+                    </b>
+                    <b class="number">
+                        4
+                    </b>
                 </div>
             </div>
         </div>
