complete book-now

--- a/pages/index.html
+++ b/pages/index.html
@@ -84,7 +84,18 @@
         </div>
         <div class="center">
         </div>
-        <div class="book-now"></div>
+        <div class="book-now">
+            <div class="book-image">
+                <div class="book-text">
+                    <h1>ARE YOU LOOKING TO TRAVEL?
+                        <H3>Make A Reservation By Clicking The Button</H3>
+                    </h1>
+                </div>
+                <div class="book-button">
+                    <button class="b3">Book Your Now</button>
+                </div>
+            </div>
+        </div>
         <div class="footer">
             <p class="footer1">
                 Copyright @ 2036 WoOx Travel Company. All rights Reserved.<br> Design : TemplateMo
