wip in the center

--- a/pages/index.html
+++ b/pages/index.html
@@ -83,6 +83,20 @@
             </div>
         </div>
         <div class="center">
+            <div class="center-text">
+                <!-- <h1 class="text-h1">
+                    Visit One Of Our Countries Now
+                </h1>
+                <p>
+                    Built self-confidence to teach someone which helps me at clients Negotiation <br> Built self-confidence to teach someone
+                </p> -->
+            </div>
+            <div class="center-grid">
+                <div class="grid-scroll">
+                </div>
+            </div>
+            <div class="center-map">centermap
+            </div>
         </div>
         <div class="book-now">
             <div class="book-image">
@@ -103,6 +117,7 @@
         </div>
 
     </div>
+
 </body>
 
 </html>
