complete perfect prototype for center

--- a/pages/index.html
+++ b/pages/index.html
@@ -84,19 +84,43 @@
         </div>
         <div class="center">
             <div class="center-text">
-                <!-- <h1 class="text-h1">
-                    Visit One Of Our Countries Now
+                <h1 class="text-h1">
+                    <b>Visit One Of Our Countries Now</b>
                 </h1>
                 <p>
                     Built self-confidence to teach someone which helps me at clients Negotiation <br> Built self-confidence to teach someone
-                </p> -->
+                </p>
             </div>
             <div class="center-grid">
+
+                <div class="grid-box1">
+                    <div class="grid-image">
+
+                    </div>
+                    <div class="grid-button">
+
+                    </div>
+                </div>
+                <div class="grid-box2">
+                    <div class="grid-image">
+
+                    </div>
+                    <div class="grid-button">
+
+                    </div>
+                </div>
+                <div class="grid-box3">
+                    <div class="grid-image">
+
+                    </div>
+                    <div class="grid-button">
+
+                    </div>
+                </div>
                 <div class="grid-scroll">
                 </div>
             </div>
-            <div class="center-map">centermap
-            </div>
+            <div class="center-map"></div>
         </div>
         <div class="book-now">
             <div class="book-image">
