complete sumit bhai template

--- a/pages/index.html
+++ b/pages/index.html
@@ -84,43 +84,108 @@
         </div>
         <div class="center">
             <div class="center-text">
+
                 <h1 class="text-h1">
-                    <b>Visit One Of Our Countries Now</b>
+                    <B>Visit One Of Our Countries Now</B>
                 </h1>
-                <p>
-                    Built self-confidence to teach someone which helps me at clients Negotiation <br> Built self-confidence to teach someone
+                <p class="text-p">
+                    Built self-confidence to teach someone which helps me at clients Negotiation do self-confidence <br> Built to teach someone which help at me clients help do
                 </p>
             </div>
             <div class="center-grid">
-
                 <div class="grid-box1">
                     <div class="grid-image">
-
+                        <img src="swit.jpg" style="border-radius: 10%;" height="100%" width="100%">
                     </div>
-                    <div class="grid-button">
+                    <div class="grid-country">
+                        <b class="country-name">SWITZERLAND</b>
+                        <p class="country-text">Europe</p>
+                    </div>
+                    <div class="grid-text">
+                        <p>Built self-confidence to teach someone which helps me at clients Negotiation Built your</p>
+                        <p>teach someone which help at me clients help do at clients Negotiation.</p>
+                    </div>
+                    <div class="grid-icon">
+                        <b class="glyphicon glyphicon-user" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;8.66 Mil People &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b class="glyphicon glyphicon-globe" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;41,290 km<i>2</i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b class="glyphicon glyphicon-home" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;$1,100,200
+                    </div>
+                    <div class="grid-direction">
+                        <b>  Need Directions ? ➜</b>
+                    </div>
 
+                    <div class="grid-button">
+                        <button class="b2">Explore More</button>
                     </div>
                 </div>
                 <div class="grid-box2">
                     <div class="grid-image">
+                        <img src="cari.webp" style="border-radius: 10%;" height="100%" width="100%">
+                    </div>
+                    <div class="grid-country">
+                        <b class="country-name">CARIBBEAN</b>
+                        <p class="country-text">North America</p>
+                    </div>
+                    <div class="grid-text">
+                        <p>Built self-confidence to teach someone which helps me at clients Negotiation Built your</p>
+                        <p>teach someone which help at me clients help do at clients Negotiation.</p>
+                    </div>
+                    <div class="grid-icon">
+                        <b class="glyphicon glyphicon-user" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;8.66 Mil People &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b class="glyphicon glyphicon-globe" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;41,290 km<i>2</i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b class="glyphicon glyphicon-home" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;$1,100,200
+                    </div>
+                    <div class="grid-direction">
+                        <b>  Need Directions ? ➜</b>
 
                     </div>
-                    <div class="grid-button">
 
+                    <div class="grid-button">
+                        <button class="b2">Explore More</button>
                     </div>
                 </div>
                 <div class="grid-box3">
                     <div class="grid-image">
+                        <img src="france.jpg" style="border-radius: 10%;" height="100%" width="100%">
+                    </div>
+                    <div class="grid-country">
+                        <b class="country-name">FRANCE</b>
+                        <p class="country-text">Europe</p>
+                    </div>
+                    <div class="grid-text">
+                        <p>Built self-confidence to teach someone which helps me at clients Negotiation Built your</p>
+                        <p>teach someone which help at me clients help do at clients Negotiation.</p>
+                    </div>
+                    <div class="grid-icon">
+                        <b class="glyphicon glyphicon-user" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;8.66 Mil People &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b class="glyphicon glyphicon-globe" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;41,290 km<i>2</i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b class="glyphicon glyphicon-home" style="font-size: 16px;"></b>&nbsp;&nbsp;&nbsp;$1,100,200
+                    </div>
+                    <div class="grid-direction">
+                        <b>  Need Directions ? ➜</b>
 
                     </div>
-                    <div class="grid-button">
 
+                    <div class="grid-button">
+                        <button class="b2">Explore More</button>
                     </div>
                 </div>
                 <div class="grid-scroll">
+                    ←
+                    <div class="scroll-1">
+                        1
+                    </div>
+                    <div class="scroll-2">2</div>
+                    <div class="scroll-3">3</div>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→
                 </div>
             </div>
-            <div class="center-map"></div>
+            <div class="center-map">
+                <img src="map.jpg" height="100%" width="100%" style="border-radius: 44px;">
+            </div>
         </div>
         <div class="book-now">
             <div class="book-image">
